--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "module": "esnext",
       "target": "es5",
+      "allowJs": true,
       "lib": [
         "es5", "dom", "es2015.promise", "es2015.core", "es2015.collection", "es2016.array.include"
       ],   
