--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "author": "Jessise",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.common.js",
+    "start": "webpack serve --config webpack.dev.js",
+    "release": "webpack --config webpack.prod.js",
+    "prepare": "husky install",
+    "eslint": "eslint ./src"
+  },
+  "lint-staged": {
+    "./src/*.{js,jsx,ts,tsx,json}": [
+      "prettier --write",
+      "eslint",
+      "git add"
+    ]
+  },
   "dependencies": {
     "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "css-minimizer-webpack-plugin": "^3.1.4",
+    "eslint-config-prettier": "^8.3.0",
+    "glob": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "mddir": "^1.1.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^6.0.1",
+    "purgecss-webpack-plugin": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -21,13 +42,21 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
+    "eslint-plugin-react": "^7.27.1",
+    "lint-staged": "^12.0.3",
     "postcss-loader": "^6.2.0",
+    "prettier": "^2.4.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
@@ -38,13 +67,5 @@
     "webpack-dev-server": "^4.5.0",
     "webpack-merge": "^5.8.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.common.js",
-    "start": "webpack serve --config webpack.dev.js",
-    "release": "webpack serve --config webpack.prod.js"
-  },
-  "author": "",
   "license": "ISC"
-
 }
