--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack serve --config webpack.dev.js",
     "release": "webpack --config webpack.prod.js",
     "prepare": "husky install",
-    "eslint": "eslint ./src"
+    "lint": "lint-staged"
   },
   "lint-staged": {
     "./src/*.{js,jsx,ts,tsx,json}": [
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "eslint-config-prettier": "^8.3.0",
+    "fs": "0.0.1-security",
     "glob": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
@@ -36,7 +37,8 @@
     "react-redux": "^7.2.6",
     "sass-loader": "^12.3.0",
     "start": "^5.1.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -54,7 +56,7 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.2.0",
     "eslint-plugin-react": "^7.27.1",
-    "lint-staged": "^12.0.3",
+    "lint-staged": "^11.2.6",
     "postcss-loader": "^6.2.0",
     "prettier": "^2.4.1",
     "progress-bar-webpack-plugin": "^2.1.0",
