--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@babel/preset-react": "^7.16.0",
     "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-minimizer-webpack-plugin": "^3.1.4",
@@ -35,6 +36,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "sass-loader": "^12.3.0",
     "start": "^5.1.0",
     "typescript": "^4.5.2",
@@ -44,6 +46,7 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/react": "^17.0.35",
