--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@babel/preset-react": "^7.16.0",
+    "antd": "^4.19.4",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "chalk": "^4.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-minimizer-webpack-plugin": "^3.1.4",
@@ -29,14 +32,19 @@
     "glob": "^7.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "immutable": "^4.0.0",
+    "js-file-downloader": "^1.1.24",
+    "long": "^5.2.0",
     "mddir": "^1.1.1",
     "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "purgecss-webpack-plugin": "^4.0.3",
     "react": "^17.0.2",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.3.0",
     "sass-loader": "^12.3.0",
     "start": "^5.1.0",
     "typescript": "^4.5.2",
